[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/systems/Camera.gd" type="Script" id=1]
[ext_resource path="res://CameraSystem/CheckInputs.gd" type="Script" id=2]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="SphereShape" id=2]
radius = 1.5

[sub_resource type="SphereShape" id=3]

[sub_resource type="SphereMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 1, 0, 0.72549, 1 )
emission_enabled = true
emission = Color( 1, 0, 0.72549, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CylinderMesh" id=6]
top_radius = 0.1
bottom_radius = 0.1
height = 4.0
radial_segments = 8
rings = 2

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 1, 0.513726, 0, 1 )
emission_enabled = true
emission = Color( 1, 0.513726, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[node name="Camera" type="Spatial"]
script = ExtResource( 1 )

[node name="XRotater" type="Spatial" parent="."]

[node name="WallDetector" type="Area" parent="XRotater"]

[node name="WallDetectorShape" type="CollisionShape" parent="XRotater/WallDetector" groups=[
"noclip",
]]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="XRotater"]
current = true
near = 0.01
far = 15000.0

[node name="DetectionSphere" type="Area" parent="XRotater/Camera"]

[node name="CollisionShape" type="CollisionShape" parent="XRotater/Camera/DetectionSphere"]
shape = SubResource( 2 )

[node name="SpringArm" type="SpringArm" parent="XRotater"]
shape = SubResource( 3 )

[node name="Target" type="MeshInstance" parent="XRotater/SpringArm"]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="DistanceMarkers" type="Spatial" parent="XRotater"]

[node name="Minimum" type="MeshInstance" parent="XRotater/DistanceMarkers"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6 )
cast_shadow = 0
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="Medium" type="MeshInstance" parent="XRotater/DistanceMarkers"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10 )
cast_shadow = 0
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="Maximum" type="MeshInstance" parent="XRotater/DistanceMarkers"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 13 )
cast_shadow = 0
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="CheckInputs" type="Node" parent="."]
script = ExtResource( 2 )

[connection signal="body_entered" from="XRotater/WallDetector" to="." method="_on_WallDetector_body_entered"]
[connection signal="body_exited" from="XRotater/WallDetector" to="." method="_on_WallDetector_body_exited"]
[connection signal="body_entered" from="XRotater/Camera/DetectionSphere" to="." method="_on_DetectionSphere_body_entered"]
[connection signal="body_exited" from="XRotater/Camera/DetectionSphere" to="." method="_on_DetectionSphere_body_exited"]
